=================================================

(Note: Isabelle/jEdit shows a tree-view of the NEWS file in Sidekick.)


New in this Isabelle version
----------------------------

*** General ***

* Old-style {* verbatim *} tokens have been discontinued (legacy feature
since Isabelle2019). INCOMPATIBILITY, use \<open>cartouche\<close> syntax instead.


*** Isabelle/VSCode Prover IDE ***

* VSCodium, an open-source distribution of VSCode without MS telemetry,
has been bundled with Isabelle as add-on component. The command-line
tool "isabelle vscode" automatically configures it as Isabelle/VSCode
and starts the application. This includes special support for the
UTF-8-Isabelle encoding and the corresponding Isabelle fonts.

* Command-line tools "isabelle electron" and "isabelle node" provide
access to the underlying technologies of VSCodium, for use in other
applications. This essentially provides a freely programmable Chromium
browser engine that works uniformly on all platforms.

Example:

  URL="https://isabelle.in.tum.de" isabelle electron \
    --app="$(isabelle getenv -b ISABELLE_HOME)"/src/Tools/Electron/test


*** HTML/PDF presentation ***

* Management of dependencies has become more robust and accurate,
following the session build hierarchy, and the up-to-date notion of
"isabelle build". Changed sessions and updated builds will cause new
HTML presentation, when that is enabled eventually. Unchanged sessions
retain their HTML output that is already present. Thus HTML presentation
for basic sessions like "HOL" and "HOL-Analysis" is produced at most
once, as required by user sessions.

* HTML presentation no longer supports README.html, which was meant as
add-on to the index.html of a session. Rare INCOMPATIBILITY, consider
using a separate theory "README" with Isabelle document markup/markdown.

* ML files (and other auxiliary files) are presented with detailed
hyperlinks, just like regular theory sources.


*** HOL ***
